patterns/blue-green-upgrade/service-mesh-green/canary/vs-split-traffic.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productcatalogservice
spec:
  hosts:
  - productcatalogservice
  http:
  - route:
    - destination:
        host: productcatalogservice
        subset: v1
      weight: 50
    - destination:
        host: productcatalogservice
        subset: v2
      weight: 50
